bynkc/tests/fixtures/negative/250_held_leak/src/room.bynk
context room
type ServerFrame = { text: String }
capability Gateway { fn accept() -> Effect[Connection[ServerFrame]] }
service Chat from http {
  on GET("/x") by v: Visitor () -> Effect[HttpResult[()]] given Gateway {
    let conn <- Gateway.accept()
    NoContent
  }
}
